--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   ],
   "license": "Apache-2.0",
   "scripts": {
-    "lint": "eslint . --ext .ts,.tsx",
-    "lint-fix": "eslint --fix . --ext .ts,.tsx",
+    "lint": "eslint .",
+    "lint-fix": "eslint . --fix",
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest --silent --passWithNoTests",
@@ -39,8 +39,6 @@
     "@types/lodash": "^4.17.13",
     "@types/node": "^22.9.0",
     "@types/shuffle-array": "^1.0.5",
-    "@typescript-eslint/eslint-plugin": "^8.13.0",
-    "@typescript-eslint/parser": "^8.13.0",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.31.0",
@@ -51,7 +49,8 @@
     "shuffle-array": "^1.0.1",
     "standard-version": "^9.5.0",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.13.0"
   },
   "resolutions": {
     "xml2js": "^0.5.0"
@@ -74,5 +73,6 @@
   "engines": {
     "node": ">=12.0.0"
   },
+  "type": "module",
   "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
