INT-809: Fork the AWS repo and publish the package to our ascentms package library.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fhir-works-on-aws-authz-rbac",
+  "name": "@ascentms/fhir-works-on-aws-authz-rbac",
   "version": "6.0.0",
   "description": "FHIR Works on AWS role base access control",
   "main": "lib/index.js",
@@ -15,6 +15,9 @@
     "Nestor Carvantes <nestorba@amazon.com>"
   ],
   "license": "Apache-2.0",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/ascentms"
+  },
   "scripts": {
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
