--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   ],
   "license": "Apache-2.0",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/ascentms"
+    "registry": "https://npm.pkg.github.com/ascentms",
+    "files": [ "lib" ]
   },
   "scripts": {
     "lint": "eslint .",
